Enterprise Release: Tomcat 10 WAR packaging, AWS RDS integration, SonarQube zero-issue compliance, and setenv config